test/conformance/chainsaw/exceptions/namespace-selector/good-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-deployment
  labels:
    app: my-app
    color: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
        color: blue
    spec:
      containers:
        - name: nginx-container
          image: public.ecr.aws/docker/library/nginx:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: "256Mi"
            requests:
              cpu: "0.5"
              memory: "128Mi"
        - name: redis-container
          image: redis:latest
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.25"
              memory: "256Mi"
