test/conformance/chainsaw/exceptions/namespace-selector/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    env: production
