test/conformance/chainsaw/exceptions/namespace-selector/skipped-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skipped-deployment
  namespace: production
  labels:
    app: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: nginx-container
          image: public.ecr.aws/docker/library/nginx:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: "256Mi"
            requests:
              cpu: "0.5"
              memory: "128Mi"
        - name: redis-container
          image: redis:latest
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.25"
              memory: "256Mi"
        - name: busybox-container
          image: public.ecr.aws/docker/library/busybox:latest
          command: ["/bin/sh", "-c", "while true; do echo 'Hello from BusyBox'; sleep 10; done"]
          resources:
            limits:
              cpu: "0.5"
              memory: "128Mi"
            requests:
              cpu: "0.25"
              memory: "64Mi"
