test/conformance/chainsaw/exceptions/namespace-selector/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: conditions
spec:
  steps:
  - name: create namespace
    try:
    - apply:
        file: namespace.yaml
  - name: create policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: max-containers
  - name: create exception
    try:
    - apply:
        file: exception.yaml
  - finally:
    - sleep:
        duration: 5s
    name: step-03
    try:
    - apply:
        file: good-deployment.yaml
    - apply:
        file: skipped-deployment.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-deployment.yaml
